Changed how python dynamic library is loaded.